<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MAIN_RL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/pot_cell_margin"
        android:layout_marginRight="@dimen/pot_cell_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_med_large"
            android:gravity="top|left"
            android:text="@string/information_you_provide_txt"
            android:textColor="@color/text_heading"
            android:textSize="@dimen/sub_text_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ALLOW_SHARES_TXT"
                style="@style/clickable_txt_grey"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="20dp"
                android:text="@string/Include_Account_Id_txt"
                android:textSize="@dimen/sub_text_size" />

            <Switch
                android:id="@+id/ACC_ID_SWITCH"
                style="@style/clickable_txt_Accent"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/sub_text_size" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_med_large"
            android:gravity="top|left"
            android:text="@string/about_me_txt"
            android:textColor="@color/text_heading"
            android:textSize="@dimen/sub_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin_sides_size"
            android:layout_marginTop="@dimen/margin_sides_size">

            <EditText
                android:id="@+id/BIO_EDIT"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_header_height"
                android:layout_toLeftOf="@+id/DONE_DIALOG_TXT"
                android:background="@drawable/edit_txt_box"
                android:layout_centerVertical="true"
                android:gravity="top|left"
                android:maxLines="3"
                android:hint="@string/tell_people_about_txt"
                android:imeOptions="actionDone"
                android:padding="5dp"
                android:textColor="@color/text_heading"
                android:textCursorDrawable="@drawable/cursor_accent"
                android:textSize="@dimen/sub_text_size" />

            <TextView
                android:id="@+id/APPLY_TXT"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/clikable_txt"
                android:background="@drawable/edit_txt_box"
                android:gravity="center"
                android:padding="@dimen/margin_sides_size"
                android:text="@string/apply_txt"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>