<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="@dimen/margin_med_large"
    android:paddingLeft="@dimen/margin_med_large"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/SUPPORT_TITLE_TXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:gravity="center|left"
            android:imeOptions="actionNext"
            android:hint="@string/title_txt"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/text_heading"
            android:textSize="@dimen/accent_txt_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

    </LinearLayout>


    <EditText
        android:id="@+id/COMMENTS_EDIT"
        android:layout_width="match_parent"
        android:layout_height="@dimen/comment_edit_box_height"
        android:layout_marginTop="@dimen/margin_med_large"
        android:imeOptions="actionDone"
        android:hint="@string/supp_comments_txt"
        android:gravity="top|left"
        android:textColor="@color/text_heading"
        android:textCursorDrawable="@drawable/cursor_accent"
        android:background="@android:color/transparent"
        android:textSize="@dimen/sub_text_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_med_large"
        android:layout_marginBottom="@dimen/margin_med_large">

        <TextView
            android:id="@+id/CANCEL_DIALOG_TXT"
            style="@style/clikable_warm_txt"
            android:gravity="center"
            android:text="@string/cancel_txt"
            android:layout_alignParentLeft="true"
            android:textColor="@color/warm_grey" />

        <TextView
            android:id="@+id/DONE_DIALOG_TXT"
            style="@style/clikable_warm_txt"
            android:gravity="center"
            android:text="@string/done_txt"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>
</LinearLayout>